[package]
name = "actors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", default-features = false }
cortex-m-rt = { version = "0.7.3", default-features = false }
defmt = { version = "0.3.4", default-features = false }
defmt-rtt = { version = "0.4.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
static_cell = { version = "1.1.0", default-features = false }
panic-probe = { version = "0.3.1", default-features = false, features = ["print-defmt"] }
embassy-futures = { version = "0.1.0", default-features = false, features = ["defmt"] }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
tag = "embassy-executor-v0.2.0"
default-features = false
features = ["arch-cortex-m", "executor-thread", "nightly", "defmt"]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy"
rev = "d36feb6"
default-features = false
features = ["stm32f411ce", "memory-x"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
tag = "embassy-sync-v0.2.0"
default-features = false

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
rev = "embassy-time-v0.1.1"
default-features = false
